--- a/Twitch Live iRacing/Twitch Live iRacing.csproj
+++ b/Twitch Live iRacing/Twitch Live iRacing.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="iRacingSdkWrapper">
       <HintPath>..\..\..\..\iRacingSdkWrapper\iRacingSdkWrapper\bin\Debug\iRacingSdkWrapper.dll</HintPath>
     </Reference>
