changes: everything working until interface finished

--- a/Twitch Live iRacing/Twitch Live iRacing.csproj
+++ b/Twitch Live iRacing/Twitch Live iRacing.csproj
@@ -38,6 +38,9 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Update="Utils\SeriesList.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
