changes: new interface and events

--- a/Twitch Live iRacing/App.config
+++ b/Twitch Live iRacing/App.config
@@ -16,6 +16,18 @@
             <setting name="TwitchChannelName" serializeAs="String">
                 <value />
             </setting>
+            <setting name="StartApplication" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="StartMinified" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="StartWithWindows" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="EnableLogs" serializeAs="String">
+                <value>True</value>
+            </setting>
         </Twitch_Live_iRacing.Settings>
     </userSettings>
 </configuration>
