changes: working with api calls

--- a/Twitch Live iRacing/App.config
+++ b/Twitch Live iRacing/App.config
@@ -11,13 +11,10 @@
                 <value />
             </setting>
             <setting name="TwitchClientId" serializeAs="String">
-                <value />
+                <value>gp762nuuoqcoxypju8c569th9wz7q5</value>
             </setting>
             <setting name="TwitchChannelName" serializeAs="String">
                 <value />
-            </setting>
-            <setting name="StartApplication" serializeAs="String">
-                <value>False</value>
             </setting>
             <setting name="StartMinified" serializeAs="String">
                 <value>False</value>
@@ -27,6 +24,9 @@
             </setting>
             <setting name="EnableLogs" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="BroadcasterId" serializeAs="String">
+                <value />
             </setting>
         </Twitch_Live_iRacing.Settings>
     </userSettings>
